[package]
name = "pdf_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_plot = "0.29"
nalgebra = "0.33"
statrs = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
